# ScholarshipDocuments

./: .gitignore  Exec.py  README.md  requirements.txt  settings.py  setup.cfg  test_executor.py
Google/: base_api.py  gss.py
Scholarship_Documents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code/Google/: base_api.py  dummy.py  gdrive.py  gss.py  test_gss.py
googleapi/: base_api.py  gdrive.py  gss.py  test_gdrive.py
secrets/: client_secret.json  drive_token.pickle  sheets_token.pickle  udes-manager-344d77f03c21.json
shipdoc/: Exec.py  beneficiaries.py  logger.py  scholarship_docs.py  settings.py  test_executor.py
shipdoc/compose/: Dockerfile  docker-compose.yml  entrypoint.sh
tests/: test_beneficiaries.py  test_google.py  test_shipsdoc.py
