[metadata]
name = Scholarship Documents
version = 0.2
long_description = file: README.md
long_description_content_type = text/markdown
author = Fernando Cruz

[options]
packages = find:
install_requires =
    environs
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    ipython
    oauth2client
    PyPDF4

[options.entry_points]
console_scripts = 
    shipdocs = bin.entry_point:main
